Add UT for microservice-a